--- a/app/src/main/res/layout/content_parlay_match.xml
+++ b/app/src/main/res/layout/content_parlay_match.xml
@@ -1,128 +1,163 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:divider="@drawable/divider_color_gray_light2"
     android:orientation="vertical"
+    android:paddingBottom="7dp"
     android:showDividers="end|middle|beginning"
     tools:ignore="SpUsage,UselessParent">
+
+    <View
+        android:id="@+id/topLine"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/color_80334266_E3E8EE" />
+
+    <LinearLayout
+        android:id="@+id/leagueContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="9dp"
+        android:gravity="center_vertical">
+
+        <ImageView
+            android:id="@+id/iv_league"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_marginEnd="4dp"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/content_league"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="4dp"
+            android:layout_weight="1"
+            android:textColor="@color/color_6C7BA8_A7B2C4"
+            android:textSize="@dimen/textSize12sp"
+            tools:text="德国甲组联赛" />
+
+        <TextView
+            android:id="@+id/parlay_play_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/color_6C7BA8_A7B2C4"
+            android:textSize="@dimen/textSize12sp"
+            tools:text="08/12 10:30" />
+    </LinearLayout>
+
+    <View
+        android:id="@+id/line"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginBottom="6dp"
+        android:background="@color/color_E8EFFD" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingStart="16dp"
-        android:paddingTop="10dp"
-        android:paddingEnd="16dp"
-        android:paddingBottom="10dp">
+        android:layout_marginHorizontal="10dp"
+        android:gravity="center_vertical">
+
+        <ImageView
+            android:id="@+id/viewLeftLine"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_detail_odd_title_line" />
+
+        <TextView
+            android:id="@+id/title_home_name_parlay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:textColor="@color/color_9BB3D9_535D76"
+            android:textSize="@dimen/textSize14sp"
+            android:textStyle="bold"
+            tools:text="密尔沃基雄鹿" />
+
+        <TextView
+            android:id="@+id/tv_vs"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:text="@string/verse_upper"
+            android:textColor="@color/color_6C7BA8_A7B2C4"
+            android:textSize="@dimen/textSize14sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/title_away_name_parlay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:textColor="@color/color_9BB3D9_535D76"
+            android:textSize="@dimen/textSize14sp"
+            android:textStyle="bold"
+            tools:text="亚特兰大老鹰" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/content_play"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="15dp"
+        android:drawablePadding="5dp"
+        android:textAlignment="viewStart"
+        android:textColor="@color/color_6C7BA8_6C7BA8"
+        android:textSize="@dimen/textSize12sp"
+        app:drawableEndCompat="@drawable/ic_right_arrow_gray"
+        app:drawableTint="@color/color_6C7BA8_A7B2C4"
+        tools:text="篮球 滚球 全场让分【欧洲盘】" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:visibility="gone">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
+            android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/content_play"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textAlignment="viewStart"
-                    android:textColor="@color/color_BBBBBB_333333"
-                    android:textSize="@dimen/textSize14sp"
-                    android:textStyle="bold"
-                    tools:text="篮球 让球" />
+            <TextView
+                android:id="@+id/tv_count_down_parley"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textAlignment="viewEnd"
+                android:textColor="@color/color_317FFF_0760D4"
+                android:textSize="@dimen/textSize14sp"
+                tools:text="30s" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/content_date"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="4dp"
-                        android:textAlignment="viewStart"
-                        android:textColor="@color/color_BBBBBB_333333"
-                        android:textSize="@dimen/textSize13sp"
-                        tools:text="06-22" />
-
-                    <TextView
-                        android:id="@+id/content_league"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:textColor="@color/color_BBBBBB_333333"
-                        android:textSize="@dimen/textSize13sp"
-                        tools:text="NBA季后赛" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/tv_count_down_parley"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:textAlignment="viewEnd"
-                    android:textColor="@color/color_317FFF_0760D4"
-                    android:textSize="@dimen/textSize14sp"
-                    tools:text="30s" />
-
-                <TextView
-                    android:id="@+id/tv_score_parlay"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:textAlignment="viewEnd"
-                    android:textColor="@color/color_7F7F7F_999999"
-                    android:textSize="@dimen/textSize12sp"
-                    tools:text="(5-26)" />
-            </LinearLayout>
-
+            <TextView
+                android:id="@+id/tv_score_parlay"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textAlignment="viewEnd"
+                android:textColor="@color/color_7F7F7F_999999"
+                android:textSize="@dimen/textSize12sp"
+                tools:text="(5-26)" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/parlay_play_time"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:textAlignment="viewStart"
-            android:textColor="@color/color_909090_666666"
-            android:textSize="@dimen/textSize13sp"
-            tools:text="2022-02-25 10:42" />
-
-        <TextView
-            android:id="@+id/tv_team_names"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:textAlignment="viewStart"
-            android:textColor="@color/color_909090_666666"
-            android:textSize="@dimen/textSize12sp"
-            tools:text="密尔沃基雄鹿 v 亚特兰大老鹰" />
-
-        <TextView
-            android:id="@+id/parlay_play_content"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:textAlignment="viewStart"
-            android:textColor="@color/color_909090_666666"
-            android:textSize="@dimen/textSize13sp"
-            tools:text="密尔沃基雄鹿 6.5 \@ 1.860" />
-
     </LinearLayout>
+
+    <!--playName spread @ odd-->
+    <TextView
+        android:id="@+id/parlay_play_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="2dp"
+        android:textAlignment="viewStart"
+        android:textColor="@color/color_9BB3D9_535D76"
+        android:textSize="@dimen/textSize12sp"
+        tools:text="密尔沃基雄鹿 6.5 \@ 1.860" />
 
 </LinearLayout>
