--- a/app/src/main/res/layout/content_parlay_record.xml
+++ b/app/src/main/res/layout/content_parlay_record.xml
@@ -1,124 +1,205 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:ignore="SpUsage">
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/color_1D4C99_0760D4"
-        android:orientation="horizontal"
-        android:paddingStart="16dp"
-        android:paddingTop="18dp"
-        android:paddingEnd="16dp"
-        android:paddingBottom="18dp">
+        android:layout_marginBottom="10dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="0dp">
 
-        <!--20220505 被要求移除-->
-        <!--<TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/label_title_parlay"
-            android:textColor="@color/colorWhite"
-            android:textSize="@dimen/textSize14sp" />-->
-
-        <TextView
-            android:id="@+id/title_parlay_type"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_item_background"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/color_FFFFFF"
-            android:textSize="@dimen/textSize14sp"
-            tools:text="2 串 1" />
-    </LinearLayout>
+            android:background="@drawable/bg_square_shape_8dp_blue_stroke_white_solid"
+            app:layout_constraintTop_toTopOf="parent">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_parlay_match"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:overScrollMode="never"
-        tools:itemCount="3"
-        tools:listitem="@layout/content_parlay_match" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingStart="16dp"
-        android:paddingTop="10dp"
-        android:paddingEnd="16dp"
-        android:paddingBottom="10dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/bet_receipt_bet_quota"
-                    android:textColor="@color/color_BBBBBB_333333"
-                    android:textSize="@dimen/textSize13sp" />
-
-                <TextView
-                    android:id="@+id/content_parlay_bet_amount"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:textColor="@color/color_BBBBBB_333333"
-                    android:textSize="@dimen/textSize13sp"
-                    tools:text="50.000" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/bet_info_list_win_quota"
-                    android:textColor="@color/color_BBBBBB_333333"
-                    android:textSize="@dimen/textSize13sp" />
-
-                <TextView
-                    android:id="@+id/content_parlay_winnable_amount"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/color_08dc6e_08dc6e"
-                    android:textSize="@dimen/textSize13sp"
-                    android:textStyle="bold"
-                    tools:text="9,999,999.000" />
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            <View
+                android:id="@+id/topContainer"
+                android:layout_width="match_parent"
+                android:layout_height="34dp"
+                android:background="@drawable/bg_shape_top_8dp_blue_stroke_no_bottom_stroke"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/content_parlay_order_no"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textColor="@color/color_7F7F7F_999999"
-                android:textSize="@dimen/textSize13sp"
-                tools:text="b000003612091822030128" />
-
-            <TextView
-                android:id="@+id/content_parlay_time_type"
+                android:id="@+id/title_parlay_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/color_7F7F7F_999999"
-                android:textSize="@dimen/textSize13sp"
-                tools:text="23:04:01 (欧洲盘)" />
-        </LinearLayout>
-    </LinearLayout>
+                android:layout_marginHorizontal="10dp"
+                android:textColor="@color/color_FFFFFF_414655"
+                android:textSize="@dimen/textSize14sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/topContainer"
+                app:layout_constraintStart_toStartOf="@+id/topContainer"
+                app:layout_constraintTop_toTopOf="@+id/topContainer"
+                tools:text="复式(2串1)-足球" />
+
+            <TextView
+                android:id="@+id/tv_bet_result_parlay"
+                android:layout_width="wrap_content"
+                android:layout_height="24dp"
+                android:background="@drawable/bg_square_shape_8dp_green"
+                android:gravity="center"
+                android:paddingHorizontal="10dp"
+                android:text="@string/undone"
+                android:textColor="@color/color_FFFFFF_FFFFFF"
+                android:textSize="@dimen/textSize12sp"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:visibility="visible" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_parlay_match"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:overScrollMode="never"
+                app:layout_constraintTop_toBottomOf="@+id/topContainer"
+                tools:itemCount="2"
+                tools:listitem="@layout/content_parlay_match" />
+
+            <LinearLayout
+                android:id="@+id/bottomContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintTop_toBottomOf="@+id/rv_parlay_match">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:layout_marginHorizontal="8dp"
+                    android:background="@drawable/bg_square_shape_2dp_gray"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="13dp"
+                        android:layout_weight="1">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/bet_info_bet_quota"
+                            android:textAlignment="viewStart"
+                            android:textColor="@color/color_9BB3D9_535D76"
+                            android:textSize="@dimen/textSize12sp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/colon"
+                            android:textAlignment="viewStart"
+                            android:textColor="@color/color_9BB3D9_535D76"
+                            android:textSize="@dimen/textSize12sp" />
+
+                        <TextView
+                            android:id="@+id/content_parlay_bet_amount"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="2dp"
+                            android:textAlignment="viewStart"
+                            android:textColor="@color/color_9BB3D9_535D76"
+                            android:textSize="@dimen/textSize12sp"
+                            android:textStyle="bold"
+                            tools:text="50.000" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="7dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/bet_info_list_win_quota"
+                            android:textAlignment="viewEnd"
+                            android:textColor="@color/color_9BB3D9_535D76"
+                            android:textSize="@dimen/textSize12sp" />
+
+                        <TextView
+                            android:id="@+id/content_parlay_winnable_amount"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAlignment="viewEnd"
+                            android:textColor="@color/color_DB6372"
+                            android:textSize="@dimen/textSize12sp"
+                            android:textStyle="bold"
+                            tools:text="9,999,999.000" />
+                    </LinearLayout>
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="6dp"
+                    android:background="@color/color_80334266_E3E8EE" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="36dp"
+                    android:layout_marginHorizontal="10dp"
+                    android:gravity="center_vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/order_number_colon"
+                        android:textColor="@color/color_A5A9B3"
+                        android:textSize="@dimen/textSize10sp" />
+
+                    <LinearLayout
+                        android:id="@+id/ll_copy_bet_order_parlay"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical">
+
+                        <TextView
+                            android:id="@+id/content_parlay_order_no"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAlignment="viewStart"
+                            android:textColor="@color/color_A5A9B3"
+                            android:textSize="@dimen/textSize10sp"
+                            tools:text="b000003612091822030128" />
+
+                        <ImageView
+                            android:layout_width="10dp"
+                            android:layout_height="10dp"
+                            android:layout_marginStart="4dp"
+                            android:src="@drawable/ic_copy" />
+                    </LinearLayout>
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="end"
+                        android:text="@string/bet_time"
+                        android:textColor="@color/color_A5A9B3"
+                        android:textSize="@dimen/textSize10sp" />
+
+                    <TextView
+                        android:id="@+id/content_parlay_time_type"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="viewEnd"
+                        android:textColor="@color/color_A5A9B3"
+                        android:textSize="@dimen/textSize10sp"
+                        tools:text="08/12 11:31" />
+                </LinearLayout>
+            </LinearLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
