--- a/app/src/main/res/layout/fragment_bank_list.xml
+++ b/app/src/main/res/layout/fragment_bank_list.xml
@@ -17,6 +17,7 @@
 
         <TextView
             android:id="@+id/tv_no_bank_card"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/color_191919_FCFCFC"
@@ -26,20 +27,61 @@
             android:textColor="@color/color_BBBBBB_333333"
             android:textSize="@dimen/textSize14sp"
             android:textStyle="bold" />
+        <LinearLayout
+            android:layout_marginStart="@dimen/margin_16"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:textSize="@dimen/textSize20sp"
+                android:text="@string/my_bank_card"
+                android:textColor="@color/color_414655"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <TextView
 
+                android:id="@+id/tv_bank_card_number"
+                android:textSize="@dimen/textSize14sp"
+                android:textColor="@color/color_414655"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_bank_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
+            android:layout_height="wrap_content"
             android:clipToPadding="false"
             android:overScrollMode="never"
             android:paddingBottom="10dp"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            app:spanCount="2"
-            tools:itemCount="5"
-            tools:listitem="@layout/content_rv_bank_list_edit"
+            tools:itemCount="2"
+            tools:listitem="@layout/content_rv_bank_card_list"
             tools:orientation="vertical" />
+        <androidx.cardview.widget.CardView
+            app:cardCornerRadius="@dimen/margin_8"
+            android:layout_marginStart="@dimen/margin_14"
+            android:layout_marginEnd="@dimen/margin_14"
+            android:layout_marginTop="@dimen/dp_10"
+            android:layout_width="match_parent"
+            android:layout_height="83dp">
+            <LinearLayout
+                android:id="@+id/cv_add_bank"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <ImageView
+                    android:src="@drawable/add_bank_card"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:layout_marginLeft="@dimen/dp_4"
+                    android:text="@string/add_credit_or_virtual"
+                    android:textSize="@dimen/textSize16sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
+
 </com.scwang.smart.refresh.layout.SmartRefreshLayout>
