--- a/app/src/main/res/layout/fragment_feedback_submit.xml
+++ b/app/src/main/res/layout/fragment_feedback_submit.xml
@@ -39,7 +39,7 @@
             android:layout_alignParentRight="true"
             tools:text="0 / 500" />
         <ImageView
-            android:src="@drawable/ic_union"
+            android:src="@drawable/ic_symbol"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
             android:layout_width="wrap_content"
