--- a/app/src/main/res/layout/content_bet_info_item_v3.xml
+++ b/app/src/main/res/layout/content_bet_info_item_v3.xml
@@ -335,13 +335,13 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/cl_hint_layout"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/bet_info_hint_view_height"
+                    android:layout_height="wrap_content"
                     app:layout_constraintBottom_toBottomOf="parent">
 
                     <TextView
                         android:id="@+id/tv_no_parlay"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="@dimen/bet_info_hint_view_height"
                         android:background="@color/color_33FFAB2E"
                         android:drawablePadding="@dimen/margin_6"
                         android:gravity="center_vertical"
@@ -352,12 +352,13 @@
                         android:visibility="gone"
                         app:drawableStartCompat="@drawable/ic_bet_lock_tip"
                         app:drawableTint="@color/color_EBA900"
+                        app:layout_constraintTop_toTopOf="parent"
                         tools:visibility="visible" />
 
                     <TextView
                         android:id="@+id/tv_bet_lock"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="@dimen/bet_info_hint_view_height"
                         android:background="@color/color_996A7797"
                         android:drawablePadding="@dimen/margin_6"
                         android:gravity="center_vertical"
@@ -368,14 +369,16 @@
                         android:visibility="gone"
                         app:drawableStartCompat="@drawable/ic_bet_lock_tip"
                         app:drawableTint="@color/color_141931_F9F9F9"
+                        app:layout_constraintTop_toTopOf="parent"
                         tools:visibility="gone" />
 
                     <FrameLayout
                         android:id="@+id/odds_change_layout"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="@dimen/bet_info_hint_view_height"
                         android:background="@drawable/bg_bet_hint_no_top_stroke"
                         android:visibility="gone"
+                        app:layout_constraintTop_toTopOf="parent"
                         tools:visibility="visible">
 
                         <TextView
